--- a/src/styles/app-components.css
+++ b/src/styles/app-components.css
@@ -9,3 +9,4 @@
 @import 'prism.css';
 
 @tailwind components;
+@import url('https://fonts.googleapis.com/css2?family=Oleo+Script:wght@400;700&display=swap')
